// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setCurrentPhraseID creates the correct payload 1`] = `
Object {
  "payload": "II/1",
  "type": "SET_CURRENT_PHRASE_ID",
}
`;

exports[`setCurrentTime creates the correct payload 1`] = `
Object {
  "payload": 30,
  "type": "SET_CURRENT_TIME",
}
`;

exports[`setIsPlaying creates the correct payload 1`] = `
Object {
  "payload": true,
  "type": "SET_IS_PLAYING",
}
`;

exports[`setStartTime creates the correct payload 1`] = `
Object {
  "payload": 30,
  "type": "SET_START_TIME",
}
`;
